# json-android-agent

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  config.py  inspect_calc.py  pyproject.toml  run.py  try_action.py  try_agent.py  try_device.py
.github/workflows/: ci.yml
agent/: __init__.py  loop.py  tools.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/jellowbeanz/json/: ChatViewModel.kt  GeminiClient.kt  JsonAccessibilityService.kt  KeyStore.kt  Logger.kt  MainActivity.kt  Providers.kt
android/app/src/main/java/com/jellowbeanz/json/agent/: AgentBrain.kt  PhoneAgent.kt
android/app/src/main/java/com/jellowbeanz/json/data/: ChatDao.kt  ChatRepository.kt  Entities.kt  JsonDatabase.kt  SettingsStore.kt
android/app/src/main/java/com/jellowbeanz/json/llm/: AnthropicProvider.kt  GeminiProvider.kt  Llm.kt  LlmProvider.kt  LocalProvider.kt  OpenAiProvider.kt
android/app/src/main/java/com/jellowbeanz/json/memory/: MemoryExtractor.kt
android/app/src/main/res/drawable/: ic_json_spark.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
apikeys/: __init__.py  __main__.py  cli.py  models.py  providers.py  store.py
device/: __init__.py  adb.py
llm/: __init__.py  gemini.py
tests/: test_models.py  test_parse_ui.py  test_providers.py  test_store.py
tests/fixtures/: sample_screen.xml
(+9 files in other folders)
